Update hola.html change title to github actions

--- a/src/main/resources/templates/hola.html
+++ b/src/main/resources/templates/hola.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Probando Jenkins 2</title>
+    <title>Probando GithubActions</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
